added nunjucks files (layout index sport, cronaca, politica article)

--- a/app/src/components/sport-article.njk
+++ b/app/src/components/sport-article.njk
@@ -1,6 +1,6 @@
 
 
-{% for section in cronaca %}
+{% for section in sport %}
 
   <section class="section">
     <div class=" max-width-900 margin-auto">
