--- a/app/src/components/politica-article.njk
+++ b/app/src/components/politica-article.njk
@@ -1,6 +1,6 @@
 
 
-{% for section in cronaca %}
+{% for section in politica %}
 
   <section class="section">
     <div class=" max-width-900 margin-auto">
