added header style

--- a/app/src/partials/header.njk
+++ b/app/src/partials/header.njk
@@ -1,3 +1,5 @@
 <header class="header">
-  City <span class="text-color-secondary">News</span>
+  <div class="max-width-900 margin-auto">
+    <h1 class="header__title"><span class="accent">City</span> News</h1>
+  </div>
 </header>
