--- a/app/style/style-two.css
+++ b/app/style/style-two.css
@@ -1,24 +1,22 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Julius+Sans+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Julius+Sans+One&display=swap");
 :root {
-  /* Margin/Padding/Font Size */
-  --xl: 3.2rem;
-  --large: 2rem;
-  --interbase: 1.8rem;
-  --base-l: 1.2rem;
+  --xsmall: 0.5rem;
+  --small: 0.7rem;
   --base: 1rem;
-  --medium: 0.7rem;
-  --small: 0.5rem;
-  /* Font family */
-  --sefir: Georgia;
+  --base-l: 1.2rem;
+  --medium-b: 1.5rem;
+  --medium: 1.8rem;
+  --large: 2rem;
+  --xl: 3rem;
+  --xxl: 6rem;
+  --serif: Georgia;
   --sans: Arial;
-  --julius: "Julius Sans One", sans-serif;
-  --anton: "Anton", sans-serif;
-  /* Colori */
-  --purple: 128, 0, 128;
-  --gray: 85, 85, 85;
-  --blue: 0, 0, 255;
+  --bebas: Bebas Neue;
+  --grey: 243, 243, 243;
+  --purple: 128, 0, 128 ;
   --white: white;
-  --secondary: orangered;
+  --accent: #ffac26;
+  --after: #d9d9d9;
 }
 
 html *,
@@ -29,11 +27,11 @@ body * {
 }
 
 body {
-  font-family: var(--sans);
+  font-family: var(--serif);
 }
 body[data-theme=blue] {
-  --color-primary: rgb(var(--gray));
-  --color-light: rgba(var(--gray), 0.5);
+  --color-primary: rgb(var(--grey));
+  --color-light: rgba(var(--grey), 0.15);
 }
 body[data-theme=purple] {
   --color-primary: rgb(var(--purple));
@@ -41,201 +39,231 @@ body[data-theme=purple] {
 }
 
 .img {
-  height: 100%;
   width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  transition: transform 4s linear;
+}
+.img:hover {
+  transform: scale(1.5);
 }
 
-.header,
-.footer {
-  background-color: var(--color-primary);
-  color: var(--white);
-  text-align: center;
-  padding: var(--base);
-}
-
-.header {
-  font-size: var(--large);
-  font-family: var(--anton);
-  font-size: var(--xl);
-}
-
-.serif {
-  font-style: var(--sefir);
-}
-
-.flex {
-  display: flex;
-}
-
-.flex-column {
-  flex-direction: column;
-}
-
-.gap {
-  --gap: var(--base);
-  gap: var(--gap);
-}
-.gap--small {
-  --gap: var(--small);
-}
-.gap--large {
-  --gap: var(--large);
-}
-
-.padding-t {
-  --padding-t: var(--base);
-  padding-top: var(--padding-t);
-}
-.padding-t--small {
-  --padding: var(--small);
-}
-.padding-t--large {
-  --padding: var(--large);
-}
-
-.margin-b {
-  --margin-b: var(--base);
-  margin-bottom: var(--margin-b);
-}
-.margin-b--small {
-  --margin: var(--small);
-}
-.margin-b--large {
-  --margin: var(--large);
-}
-
-.text-color-secondary {
-  color: var(--secondary);
-}
-
-.container {
-  margin: 0 auto;
+.max-width-900 {
   max-width: 900px;
 }
 
+.margin-auto {
+  margin: 0 auto;
+}
+
+.accent {
+  color: var(--accent);
+}
+
+.span {
+  font-weight: 700;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  padding-bottom: var(--xsmall);
+  display: inline-block;
+}
+
+.display-none {
+  display: none;
+}
+
+.header {
+  padding: var(--large) 0 var(--base);
+  background-color: var(--color-primary);
+  font-family: "Arial";
+  position: relative;
+}
+.header__modal {
+  display: none;
+  width: 100vw;
+  background: var(--color-primary);
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  top: 100%;
+}
+.header__modal__links {
+  height: 100%;
+  background-color: var(--color-primary);
+  display: flex;
+  justify-content: space-between;
+  padding-top: var(--base);
+}
+.header__title {
+  font-size: var(--xxl);
+  font-family: var(--bebas);
+}
+.header__links-container {
+  font-weight: 700;
+  padding-left: var(--small);
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+  font-size: 1.2rem;
+}
+
+#modal:checked ~ .header__modal {
+  display: block;
+}
+
+.notizie:not(:first-child) {
+  border-left: 1px solid rgb(177, 177, 177);
+  height: 90%;
+  padding-left: 1rem;
+}
+.notizie__list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.notizie__title {
+  font-size: 1rem;
+  font-weight: 700;
+  padding-bottom: 1rem;
+  display: inline-block;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.footer {
+  background-color: var(--color-primary);
+  text-align: center;
+  font-size: 1rem;
+  font-style: italic;
+  padding: var(--large);
+}
+
 .section {
-  padding: var(--base) var(--small);
-}
-.section:nth-child(odd) {
   background-color: var(--color-light);
+  padding-top: 2rem;
 }
-.section--title {
-  --color: var(--color-primary);
-  --border: 3px solid var(--color-primary);
-  color: var(--color);
-  border-bottom: var(--border);
-  font-size: var(--large);
-  font-family: var(--julius);
-}
-.section:nth-child(even) .section--title {
-  --color: var(--secondary);
-  --border: 3px solid var(--secondary);
-}
-.section:nth-child(odd) .section--title {
-  --color: var(--white);
-  --border: 3px solid var(--white);
+:nth-child(even of .section) {
+  background-color: var(--color-primary);
 }
 
 @media screen and (min-width: 768px) {
-  .articles-layout {
+  .section__articles-layout {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-areas: "a a" "b c";
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    grid-template-areas: "a a" "b c" "d e";
   }
+}
+
+.section__title {
+  padding-bottom: 0.5rem;
+  font-family: "Arial";
+  position: relative;
+  border-bottom: 3px solid var(--accent);
+  line-height: 0.7rem;
+}
+.section__title::first-letter {
+  font-size: 2rem;
 }
 
 .article {
+  padding: 2rem 0;
   position: relative;
-  padding: var(--base) 0;
 }
-.article:not(:last-child):after {
-  --background: var(--secondary);
+.article:not(:last-child)::after {
   content: "";
   position: absolute;
-  bottom: 0;
-  left: 50%;
   height: 2px;
-  background-color: var(--background);
-  width: 60%;
+  width: 80%;
+  background-color: var(--after);
+  left: 50%;
+  bottom: 0;
   transform: translateX(-50%);
 }
-.section:nth-child(odd) .article:not(:last-child):after {
-  background-color: var(--white);
+@media screen and (min-width: 768px) {
+  .article:not(:last-child)::after {
+    width: 100%;
+  }
 }
 @media screen and (min-width: 768px) {
   .article {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 200px 1fr;
-    padding: var(--base);
+    padding-top: unset;
   }
-  .article:first-child {
-    grid-area: a;
+  :nth-child(1 of .article) {
     display: grid;
+    padding-top: 2rem;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-    -moz-column-gap: 1rem;
-         column-gap: 1rem;
-    align-items: center;
+    grid-area: a;
   }
-  .article:first-child::after {
-    left: 0;
-    height: 1px;
-    width: 100%;
-    background-color: var(--secondary);
-    transform: translateX(0);
-  }
-  .article:nth-child(even)::after {
-    left: 100%;
+  :nth-child(2 of .article)::after {
+    right: 0;
+    width: 2px;
     height: 100%;
-    width: 1px;
-    background-color: var(--secondary);
+    left: calc(100% + 1rem);
+    background-color: var(--after);
+  }
+  .article:not(:first-child) {
+    padding-bottom: unset;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
   }
 }
-.article--information {
-  align-self: flex-start;
-  font-size: var(--base);
-  text-transform: uppercase;
-  color: var(--secondary);
-}
-.article--heading {
-  font-size: var(--large);
-  letter-spacing: 0.1px;
-  line-height: 1;
-  font-family: var(--sefir);
-}
-.section:nth-child(odd) .article--heading {
-  color: var(--white);
+.article__img {
+  overflow: hidden;
 }
 @media screen and (min-width: 768px) {
-  .article:first-child .article--heading {
-    font-size: var(--xl);
+  .article:not(:first-child) .article__img {
+    width: 100%;
+  }
+  .article__img .img {
+    -o-object-fit: none;
+       object-fit: none;
+    -o-object-position: 6% 76%;
+       object-position: 6% 76%;
   }
 }
-.article--paragraph {
-  line-height: 1.3;
-  letter-spacing: 1px;
+.section:nth-child(odd) .article__img {
+  order: 1;
+}
+.article__content {
+  padding: 1rem 1rem 0;
+}
+@media screen and (min-width: 768px) {
+  .article__content {
+    padding: unset;
+  }
+  .article:first-child .article__content {
+    padding-left: 1rem;
+  }
+  .section:nth-child(odd) .article__content {
+    padding-left: unset;
+    padding-right: 1rem;
+  }
+}
+.article__title {
+  font-size: var(--large);
+  padding-bottom: var(--base);
+}
+@media screen and (min-width: 768px) {
+  .article:not(:first-child) .article__title {
+    font-size: var(--medium-b);
+  }
+}
+.article__para {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   overflow: hidden;
   -webkit-line-clamp: 3;
-  font-size: 1.2rem;
-}
-.section:nth-child(odd) .article--paragraph {
-  color: var(--white);
+  font-weight: 500;
+  line-height: 1.5;
+  font-family: "Arial";
+  font-size: var(--base);
 }
 @media screen and (min-width: 768px) {
-  .article:not(:first-child) .article--paragraph {
+  .article:not(:first-child) .article__para {
     display: none;
   }
-}
-.article--author {
-  font-size: var(--medium);
-  font-style: italic;
-  margin-top: calc(-1 * var(--small));
-}
-.section:nth-child(odd) .article--author {
-  color: var(--white);
 }/*# sourceMappingURL=style-two.css.map */
