--- a/app/style/style-two.scss
+++ b/app/style/style-two.scss
@@ -1,27 +1,69 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Julius+Sans+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&family=Julius+Sans+One&display=swap");
+
+// Maps in SCSS
+$measure: (
+  "xsmall": 0.5rem,
+  "small": 0.7rem,
+  "base": 1rem,
+  "base-l": 1.2rem,
+  "medium-b": 1.5rem,
+  "medium": 1.8rem,
+  "large": 2rem,
+  "xl": 3rem,
+  "xxl": 6rem,
+);
+
+// Breakpoints map
+$breakpoints: (
+  "sm": 768px,
+  "md": 1200px,
+  "lg": 1600px,
+);
+
+// FontStyle map
+$fontStyle: (
+  "serif": "Georgia",
+  "sans": "Arial",
+  "bebas": "Bebas Neue",
+);
+
+// Color map
+$colors: (
+  "grey": "243, 243, 243",
+  "purple": "128, 0, 128 ",
+  "white": white,
+  "accent": "#ffac26",
+  "after": #d9d9d9,
+);
+
+@mixin breakpoints($name) {
+  @if not map-has-key($breakpoints, $name) {
+    @warn "Invalid breakpoint `#{$name}`.";
+  } @else {
+    @media screen and (min-width: map-get($breakpoints,$name)) {
+      @content;
+    }
+  }
+}
+
 :root {
-  /* Margin/Padding/Font Size */
+  // Facciamo un ciclo each così da creare variabile CSS da poter usare anche
+  // durante il codice in SCSS var(--nomeVariabile)
 
-  --xl: 3.2rem;
-  --large: 2rem;
-  --interbase: 1.8rem;
-  --base-l: 1.2rem;
-  --base: 1rem;
-  --medium: 0.7rem;
-  --small: 0.5rem;
+  // Margin / Padding / Font-Size
+  @each $name, $value in $measure {
+    --#{$name}: #{$value};
+  }
 
-  /* Font family */
-  --sefir: Georgia;
-  --sans: Arial;
-  --julius: "Julius Sans One", sans-serif;
-  --anton: "Anton", sans-serif;
+  // FontStyle
+  @each $name, $value in $fontStyle {
+    --#{$name}: #{$value};
+  }
 
-  /* Colori */
-  --purple: 128, 0, 128;
-  --gray: 85, 85, 85;
-  --blue: 0, 0, 255;
-  --white: white;
-  --secondary: orangered;
+  // Colors
+  @each $name, $value in $colors {
+    --#{$name}: #{$value};
+  }
 }
 
 html *,
@@ -32,10 +74,10 @@ body * {
 }
 
 body {
-  font-family: var(--sans);
+  font-family: var(--serif);
   &[data-theme="blue"] {
-    --color-primary: rgb(var(--gray));
-    --color-light: rgba(var(--gray), 0.5);
+    --color-primary: rgb(var(--grey));
+    --color-light: rgba(var(--grey), 0.15);
   }
   &[data-theme="purple"] {
     --color-primary: rgb(var(--purple));
@@ -44,229 +86,258 @@ body {
 }
 
 .img {
-  height: 100%;
   width: 100%;
+  height: 100%;
   object-fit: cover;
-}
-
-.header,
-.footer {
-  background-color: var(--color-primary);
-  color: var(--white);
-  text-align: center;
-  padding: var(--base);
-}
-
-.header {
-  font-size: var(--large);
-  font-family: var(--anton);
-  font-size: var(--xl);
-}
-
-.serif {
-  font-style: var(--sefir);
-}
-
-.flex {
-  display: flex;
-}
-
-.flex-column {
-  flex-direction: column;
-}
-
-.gap {
-  --gap: var(--base);
-  gap: var(--gap);
-
-  &--small {
-    --gap: var(--small);
+  transition: transform 4s linear;
+  &:hover {
+    transform: scale(1.5);
   }
-
-  &--large {
-    --gap: var(--large);
-  }
+  // @media screen and (min-width: 768px) {
+  //   border-radius: map-get($measure, small);
+  // }
 }
 
-.padding-t {
-  --padding-t: var(--base);
-  padding-top: var(--padding-t);
-
-  &--small {
-    --padding: var(--small);
-  }
-
-  &--large {
-    --padding: var(--large);
-  }
-}
-
-.margin-b {
-  --margin-b: var(--base);
-  margin-bottom: var(--margin-b);
-
-  &--small {
-    --margin: var(--small);
-  }
-
-  &--large {
-    --margin: var(--large);
-  }
-}
-
-.text-color-secondary {
-  color: var(--secondary);
-}
-
-.container {
-  margin: 0 auto;
+.max-width-900 {
   max-width: 900px;
 }
 
-.section {
-  padding: var(--base) var(--small);
+.margin-auto {
+  margin: 0 auto;
+}
 
-  &:nth-child(odd) {
-    background-color: var(--color-light);
+.accent {
+  color: var(--accent);
+}
+
+.span {
+  font-weight: 700;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  padding-bottom: var(--xsmall);
+  display: inline-block;
+}
+
+.display-none {
+  display: none;
+}
+
+.header {
+  padding: var(--large) 0 var(--base);
+  background-color: var(--color-primary);
+  font-family: map-get($fontStyle, sans);
+  position: relative;
+
+  &__modal {
+    display: none;
+    width: 100vw;
+    // height: 70vh;
+    background: var(--color-primary);
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 100%;
+
+    &__links {
+      height: 100%;
+      background-color: var(--color-primary);
+      display: flex;
+      justify-content: space-between;
+      padding-top: var(--base);
+    }
   }
-  &--title {
-    --color: var(--color-primary);
-    --border: 3px solid var(--color-primary);
-    color: var(--color);
-    border-bottom: var(--border);
-    font-size: var(--large);
-    font-family: var(--julius);
-    .section:nth-child(even) & {
-      --color: var(--secondary);
-      --border: 3px solid var(--secondary);
-    }
 
-    .section:nth-child(odd) & {
-      --color: var(--white);
-      --border: 3px solid var(--white);
-    }
+  &__title {
+    font-size: var(--xxl);
+    font-family: var(--bebas);
+  }
+
+  &__links-container {
+    font-weight: 700;
+    padding-left: var(--small);
+    list-style: none;
+    display: flex;
+    gap: 1rem;
+    font-size: 1.2rem;
+    // &:hover + .header__modal {
+    //   display: block;
+    // }
   }
 }
 
-// contenitore dei tre articoli
-.articles-layout {
+#modal:checked ~ .header__modal {
+  display: block;
+}
+
+.notizie {
+  &:not(:first-child) {
+    border-left: 1px solid rgb(177, 177, 177);
+    height: 90%;
+    padding-left: 1rem;
+  }
+
+  &__list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  &__title {
+    font-size: 1rem;
+    font-weight: 700;
+    padding-bottom: 1rem;
+    display: inline-block;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+}
+
+.footer {
+  background-color: var(--color-primary);
+  text-align: center;
+  font-size: map-get($measure, base);
+  font-style: italic;
+  padding: var(--large);
+}
+
+.section {
+  background-color: var(--color-light);
+  padding-top: map-get($measure, large);
+  :nth-child(even of &) {
+    background-color: var(--color-primary);
+  }
+}
+
+.section__articles-layout {
+  // padding: var(--base);
+
   @media screen and (min-width: 768px) {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
+    gap: map-get($measure, large);
     grid-template-areas:
       "a a"
-      "b c";
+      "b c"
+      "d e";
   }
 }
 
-// contenitore di un singolo articolo
-.article {
+.section__title {
+  padding-bottom: map-get($measure, xsmall);
+  font-family: map-get($fontStyle, sans);
   position: relative;
-  padding: var(--base) 0;
+  border-bottom: 3px solid var(--accent);
+  line-height: map-get($measure, small);
 
-  &:not(:last-child):after {
-    --background: var(--secondary);
+  &::first-letter {
+    font-size: map-get($measure, large);
+  }
+}
+
+.article {
+  padding: map-get($measure, large) 0;
+  position: relative;
+
+  &:not(:last-child)::after {
     content: "";
     position: absolute;
-    bottom: 0;
-    left: 50%;
     height: 2px;
-    background-color: var(--background);
-    width: 60%;
+    width: 80%;
+    background-color: var(--after);
+    left: 50%;
+    bottom: 0;
     transform: translateX(-50%);
-    .section:nth-child(odd) & {
-      background-color: var(--white);
-    }
-  }
-
-  @media screen and (min-width: 768px) {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 200px 1fr;
-    padding: var(--base);
-
-    &:first-child {
-      grid-area: a;
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      grid-template-rows: 1fr;
-      column-gap: 1rem;
-      align-items: center;
-
-      &::after {
-        left: 0;
-        height: 1px;
-        width: 100%;
-        background-color: var(--secondary);
-        transform: translateX(0);
-      }
-    }
-
-    // &:nth-child(2) {
-    //   grid-area: b;
-    // }
-
-    &:nth-child(even)::after {
-      left: 100%;
-      height: 100%;
-      width: 1px;
-      background-color: var(--secondary);
-    }
-  }
-
-  // badge al di sopra del titolo dell'articolo
-  &--information {
-    align-self: flex-start;
-    font-size: var(--base);
-    text-transform: uppercase;
-    color: var(--secondary);
-    // .section:nth-child(odd) & {
-    //   color: black;
-    // }
-  }
-
-  &--heading {
-    font-size: var(--large);
-    letter-spacing: 0.1px;
-    line-height: 1;
-    font-family: var(--sefir);
-    .section:nth-child(odd) & {
-      color: var(--white);
-    }
     @media screen and (min-width: 768px) {
+      width: 100%;
+    }
+  }
+
+  @include breakpoints("sm") {
+    padding-top: unset;
+    :nth-child(1 of &) {
+      display: grid;
+      padding-top: 2rem;
+
+      grid-template-columns: repeat(2, 1fr);
+      grid-area: a;
+    }
+
+    :nth-child(2 of &)::after {
+      right: 0;
+      width: 2px;
+      height: 100%;
+      left: calc(100% + 1rem);
+      background-color: var(--after);
+    }
+
+    &:not(:first-child) {
+      padding-bottom: unset;
+      display: flex;
+      // align-items: start;
+      justify-content: center;
+      gap: map-get($measure, base);
+    }
+  }
+
+  &__img {
+    overflow: hidden;
+    @media screen and (min-width: 768px) {
+      .article:not(:first-child) & {
+        width: 100%;
+      }
+
+      & .img {
+        object-fit: none;
+        object-position: 6% 76%;
+      }
+    }
+    .section:nth-child(odd) & {
+      order: 1;
+    }
+  }
+
+  &__content {
+    padding: map-get($measure, base) map-get($measure, base) 0;
+    @media screen and (min-width: 768px) {
+      padding: unset;
+      // .article:not(:first-child) & {
+      //   padding-top: 1rem;
+      // }
+
       .article:first-child & {
-        font-size: var(--xl);
+        padding-left: 1rem;
+      }
+
+      .section:nth-child(odd) & {
+        padding-left: unset;
+        padding-right: 1rem;
       }
     }
   }
 
-  &--paragraph {
-    line-height: 1.3;
-    letter-spacing: 1px;
+  &__title {
+    font-size: var(--large);
+    padding-bottom: var(--base);
+    @media screen and (min-width: 768px) {
+      .article:not(:first-child) & {
+        font-size: var(--medium-b);
+      }
+    }
+  }
+  &__para {
     display: -webkit-box;
     -webkit-box-orient: vertical;
     overflow: hidden;
     -webkit-line-clamp: 3;
-    font-size: 1.2rem;
-    .section:nth-child(odd) & {
-      color: var(--white);
-    }
+    font-weight: 500;
+    line-height: 1.5;
+    font-family: map-get($fontStyle, sans);
+    font-size: var(--base);
     @media screen and (min-width: 768px) {
       .article:not(:first-child) & {
         display: none;
       }
     }
   }
-
-  // autore articolo
-  &--author {
-    font-size: var(--medium);
-    font-style: italic;
-    margin-top: calc(-1 * var(--small));
-    .section:nth-child(odd) & {
-      color: var(--white);
-    }
-  }
 }
-
-
