--- a/app/style/style-two.scss
+++ b/app/style/style-two.scss
@@ -196,7 +196,7 @@ body {
 .footer {
   background-color: var(--color-primary);
   text-align: center;
-  font-size: map-get($measure, base);
+  font-size: var(--base);
   font-style: italic;
   padding: var(--large);
 }
