added sections style

--- a/app/src/components/cronaca-article.njk
+++ b/app/src/components/cronaca-article.njk
@@ -2,7 +2,7 @@
 
 {% for section in cronaca %}
 
-  <section class="section">
+  <section class="section" id="cronaca">
     <div class=" max-width-900 margin-auto">
       <h2 class="section__title accent "> {{section.sectionTitle}} </h2>
         <div class="section__articles-layout">
