--- a/app/src/pages/index.njk
+++ b/app/src/pages/index.njk
@@ -1,4 +1,4 @@
-{% extends "./layout.njk" %} 
+{# {% extends "./layout.njk" %} 
 
 
 {% block cronaca %}
@@ -11,4 +11,4 @@
 
 {% block sport %}
 {% include "./components/sport-article.njk" %}
-{% endblock %}
+{% endblock %} #}
