--- a/app/src/partials/header.njk
+++ b/app/src/partials/header.njk
@@ -1,5 +1,20 @@
 <header class="header">
   <div class="max-width-900 margin-auto">
     <h1 class="header__title"><span class="accent">City</span> News</h1>
+
+    <ul class="header__links-container">
+      <li class="header__link">
+        <!-- <label for="modal"> Home </label> -->
+        <a href="cronaca.html">Cronaca</a>
+      </li>
+      <li class="header__link">
+        <!-- <label for="modal"> About </label> -->
+        <a href="politica.html">Politica</a>
+      </li>
+      <li class="header__link">
+        <!-- <label for="modal"> Contact </label> -->
+        <a href="sport.html">Sport</a>
+      </li>
+    </ul>
   </div>
 </header>
