--- a/app/src/components/sport-article.njk
+++ b/app/src/components/sport-article.njk
@@ -2,7 +2,7 @@
 
 {% for section in sport %}
 
-  <section class="section">
+  <section class="section" id="sport">
     <div class=" max-width-900 margin-auto">
       <h2 class="section__title accent "> {{section.sectionTitle}} </h2>
         <div class="section__articles-layout">
