--- a/app/style/style-two.css
+++ b/app/style/style-two.css
@@ -79,22 +79,6 @@ body[data-theme=purple] {
   font-family: "Arial";
   position: relative;
 }
-.header__modal {
-  display: none;
-  width: 100vw;
-  background: var(--color-primary);
-  position: absolute;
-  z-index: 1;
-  left: 0;
-  top: 100%;
-}
-.header__modal__links {
-  height: 100%;
-  background-color: var(--color-primary);
-  display: flex;
-  justify-content: space-between;
-  padding-top: var(--base);
-}
 .header__title {
   font-size: var(--xxl);
   font-family: var(--bebas);
@@ -107,9 +91,14 @@ body[data-theme=purple] {
   gap: 1rem;
   font-size: 1.2rem;
 }
-
-#modal:checked ~ .header__modal {
-  display: block;
+.header__link a {
+  text-decoration: none;
+  color: black;
+  padding-bottom: var(--base);
+  transition: all 0.3s linear;
+}
+.header__link a:hover {
+  box-shadow: inset 0 -4px var(--accent);
 }
 
 .notizie:not(:first-child) {
