--- a/app/style/style-two.scss
+++ b/app/style/style-two.scss
@@ -184,6 +184,9 @@ body {
   font-size: var(--base);
   font-style: italic;
   padding: var(--large);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .section {
